--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
   <body>
     <!--Шапка-->
     <header class="page-header">
-      <div class="container flexbox"></div>
+      <div class="container flexbox">
       <nav class="nav flex">
         <a href="index.html" class="logo flex">
           <span class="logo web">Web</span><span class="logo-header-studio">Studio</span>
         </a>
         <ul class="site-nav list flex">
-          <li class="item nav"><a href="./index.html" class="link current">Студия</a></li>
-          <li class="item nav"><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li class="item nav"><a href="" class="link">Контакты</a></li>
+          <li class="item-nav"><a href="./index.html" class="link current">Студия</a></li>
+          <li class="item-nav"><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li class="item-nav"><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
       <ul class="header-contact list flex">
         <li class="item-nav">
-          <a href="mailto:info@example.com" class="link">info@example.com</a>
+          <a href="mailto:info@example.com" class="header-contact link">info@example.com</a>
         </li>
         <li class="item-nav"><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
       </ul>
@@ -49,34 +49,34 @@
       </div>
       </section>
       <!-- преимущества-->
-      <section class="section our-approach">
+      <section class="section our-accent">
         <div class="container flex">
           <h2 class="hide">Наш подход</h2>
-        <ul class="our-approach list flex">
-          <li class="item-approach">
-            <h3 class="section-title">Внимание к деталям</h3>
-            <p class="section-text">
+        <ul class="our-accent list flex">
+          <li class="item-accent">
+            <h3 class="title">Внимание к деталям</h3>
+            <p class="our-accent-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li  class="item-approach">
-            <h3 class="section-title">Пунктуальность</h3>
-            <p class="section-text">
+          <li  class="item-accent">
+            <h3 class="title">Пунктуальность</h3>
+            <p class="our-accent-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li  class="item-approach">
-            <h3 class="section-title">Планирование</h3>
+          <li  class="item-accent">
+            <h3 class="title">Планирование</h3>
             <p class="section-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li  class="item-approach">
-            <h3 class="section-title">Современные технологии</h3>
-            <p class="section-text">
+          <li  class="item-accent">
+            <h3 class="title">Современные технологии</h3>
+            <p class="our-accent-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -84,20 +84,19 @@
         </ul>
       </div>
       </section>
-      <section class="gallery">
-        <!--галерея-->
-        <h2 class="team">Чем мы занимаемся</h2>
-        <ul class="work list">
-          <li>
-            <a href="">
-              <img
-                src="./images/doing1.jpg"
-                alt="Работа с контентом"
-                width="370"
-              />
-            </a>
+      <!--Чем мы занимаемся-->
+      <section class="section">
+        <div class="container">
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="work-list list flex">
+          <li class="item-work">
+            <img
+              src="./images/doing1.jpg"
+              alt="Работа с контентом"
+              width="370"
+            />
           </li>
-          <li>
+          <li class="item-work">
             <a href="">
               <img
                 src="./images/doing2.jpg"
@@ -106,7 +105,7 @@
               />
             </a>
           </li>
-          <li>
+          <li class="item-work">
             <a href="">
               <img
                 src="./images/doing3.jpg"
@@ -116,37 +115,39 @@
             </a>
           </li>
         </ul>
+        </div>
       </section>
       <!--команда-->
-      <section class="team-section">
-        <h2 class="team">Наша команда</h2>
-        <ul class="people list">
-          <li>
+      <section class="section our-team flex">
+        <div class="container">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="team-list list flex">
+          <li class="item-team">
             <img
               src="./images/imgworker1.jpg"
               alt="Фото члена команды"
               width="270"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p class="people-prof">Product Designer</p>
+            <h3 class="name-manager">Игорь Демьяненко</h3>
+            <p class="specialty">Product Designer</p>
           </li>
-          <li>
+          <li class="item-team">
             <img
               src="./images/imgworker2.jpg"
               alt="Фото члена команды"
               width="270"
             />
-            <h3>Ольга Репина</h3>
-            <p class="people-prof">Frontend Developer</p>
+            <h3 class="name-manager">Ольга Репина</h3>
+            <p class="specialty">Frontend Developer</p>
           </li>
-          <li>
+          <li class="item-team">
             <img
               src="./images/imgworker3.jpg"
               width="270"
               alt="Фото члена команды"
             />
-            <h3>Николай Тарасов</h3>
-            <p class="people-prof">Marketing</p>
+            <h3 class="name-manager">Николай Тарасов</h3>
+            <p class="specialty">Marketing</p>
           </li>
           <li>
             <img
@@ -154,22 +155,25 @@
               alt="Фото члена команды"
               width="270"
             />
-            <h3>Михаил Ермаков</h3>
-            <p class="people-prof">UI Designer</p>
+            <h3 class="name-manager">Михаил Ермаков</h3>
+            <p class="specialty">UI Designer</p>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <!--Футер-->
-    <footer>
+    <footer class="footer">
+      <div class="container box-footer">
       <a href="./index.html" class="logo">
-        <span>Web</span><span class="logo-white">Studio</span></a
+        <span class="logo-web">Web</span><span class="logo-footer-studio">Studio</span></a
       >
-      <address class="address">
-        г. Киев, пр-т Леси Украинки, 26<br />
-        <a href="mailto:info@example.com">info@example.com</a><br />
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+      <address class="address-footer flex">
+        <p class="address-kiev">г. Киев, пр-т Леси Украинки, 26</p>
+        <a href="mailto:info@example.com" class="footer-contact link">info@example.com</a>
+        <a href="tel:+380991111111" class="footer-contact link">+38 099 111 11 11</a>
       </address>
+      </div>
     </footer>
   </body>
 </html>
