--- a/portfolio.html
+++ b/portfolio.html
@@ -15,169 +15,137 @@
       rel="stylesheet"
     />
     <!--Стили-->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="page">
+  <body class="portfolio">
     <!--шапка-->
     <header class="page-header">
       <div class="container flexbox">
-      <a href="">
-        <img src="images/bcgimg.jpg" alt="фото-в-процессе" />
+      <nav class="nav flex">
+      <a href="index.html" class="logo flex">
+      <span class="logo-web">Web</span><span class="logo-header-studio">Studio</span>
       </a>
-
-      <nav class="site-nav">
-        <ul class="site-nav list">
-          <li>
-            <a class="link" href="./index.html"
-              ><span class="logotype"
-                ><span class="logo">Web</span> Studio</span
-              ></a
-            >
-          </li>
-          <li><a class="link" href="./index.html">Студия</a></li>
-          <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="link" href="">Контакты</a></li>
+        <ul class="site-nav list flex">
+          <li class="item-nav"><a class="link" href="./index.html">Студия</a></li>
+          <li class="item-nav"><a class="link current" href="./portfolio.html">Портфолио</a></li>
+          <li class="item-nav"><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="contacts">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+380961111111</a></li>
+      <ul class="header-contact list flex">
+        <li class="item-nav"><a href="mailto:info@devstudio.com" class="header-contact link">info@devstudio.com</a></li>
+        <li class="item-nav"><a href="tel:+380961111111" class="link">+380961111111</a></li>
       </ul>
     </div>
     </header>
-    <main>
+    <main class="box-portfolio">
       <!--основная часть-->
-      <section>
-        <h1 class="hero-title">Примеры работ</h1>
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <div class="container">
+        <h1 class="hide">Примеры работ</h1>
+        <ul class="button-list list">
+          <li class="item-button"><button type="button">Все</button></li>
+          <li class="item-button"><button type="button">Веб-сайты</button></li>
+          <li class="item-button"><button type="button">Приложения</button></li>
+          <li class="item-button"><button type="button">Дизайн</button></li>
+          <li class="item-button"><button type="button">Маркетинг</button></li>
         </ul>
-        <ul>
-          <li>
-            <a href="">
+        <ul class="list flex wrap">
+          <li class="item-project">
+            <a href="" class="link">
               <img src="./images/portf1.jpg" alt="" />
-              <h3 class="portfolio-title">Технокряк</h3>
-              <p class="portfolio-text">Веб-сайт</p>
-              <p class="portfolio-description">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="container-description">
+              <h2 class="project">Технокряк</h2>
+              <p class="type-project">Веб-сайт</p>
+              </div>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="item-project">
+            <a href="" class="link"> 
               <img src="./images/portf2.jpg" alt="" />
-              <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-              <p class="portfolio-text">Дизайн</p>
-              <p class="portfolio-description">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="container-description">
+              <h2 class="project">Постер New Orlean vs Golden Star</h2>
+              <p class="type-project">Дизайн</p>
+              </div>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="item-project">
+            <a href="" class="link">
               <img src="./images/portf3.jpg" alt="" />
-              <h3 class="portfolio-title">Ресторан Seafood</h3>
-              <p class="portfolio-text">Приложения</p>
-              <p class="portfolio-description">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="container-description">
+              <h2 class="project">Ресторан Seafood</h2>
+              <p class="type-project">Приложения</p>
+              </div>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="item-project">
+            <a href="" class="link">
               <img src="./images/portf4.jpg" alt="" />
-              <h3 class="portfolio-title">Проект Prime</h3>
-              <p class="portfolio-text">Маркетинг</p>
-              <p class="portfolio-description">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="container-description">
+              <h2 class="project">Проект Prime</h2>
+              <p class="type-project">Маркетинг</p>
+              </div>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="item-project">
+            <a href="" class="link">
               <img src="./images/portf5.jpg" alt="" />
-              <h3 class="portfolio-title">Проект Boxes</h3>
-              <p class="portfolio-text">Приложение</p>
-              <p class="portfolio-description">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="container-description">
+              <h2 class="project">Проект Boxes</h2>
+              <p class="type-project">Приложение</p>
+              </div>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="item-project">
+            <a href="" class="link">
               <img src="./images/portf6.jpg" alt="" />
-              <h3 class="portfolio-title">Inspiration has no Borders</h3>
-              <p class="portfolio-text">Веб-сайт</p>
-              <p class="portfolio-description">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="container-description">
+              <h2 class="project">Inspiration has no Borders</h2>
+              <p class="type-project">Веб-сайт</p>
+              </div>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="item-project">
+            <a href="" class="link">
               <img src="./images/portf7.jpg" alt="" />
-              <h3 class="portfolio-title">Издание Limited Edition</h3>
-              <p class="portfolio-text">Дизайн</p>
+              <div class="container-description">
+              <h2 class="project">Издание Limited Edition</h2>
+              <p class="type-project">Дизайн</p>
               <p class="portfolio-description">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              </div>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="item-project">
+            <a href="" class="link">
               <img src="./images/portf8.jpg" alt="" />
-              <h3 class="portfolio-title">Проект LAB</h3>
-              <p class="portfolio-text">Маркетинг</p>
-              <p class="portfolio-description">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="container-description">
+              <h2 class="project">Проект LAB</h2>
+              <p class="type-project">Маркетинг</p>
+              </div>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="item-project">
+            <a href="" class="link">
               <img src="./images/portf9.jpg" alt="" />
-              <h3 class="portfolio-title">Growing Business</h3>
-              <p class="portfolio-text">Приложение</p>
-              <p class="portfolio-description">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              <div class="container-description">
+              <h2 class="project">Growing Business</h2>
+              <p class="type-project">Приложение</p>
+              </div>
             </a>
           </li>
         </ul>
-      </section>
+        </div>
     </main>
     <!--футер-->
-    <footer>
+    <footer class="footer">
+      <div class="container box-footer">
         <a href="./index.html" class="logo">
-          <span>Web</span><span class="logo-white">Studio</span></a
-        >
-        <address class="address">
-          г. Киев, пр-т Леси Украинки, 26<br />
-          <a href="mailto:info@example.com">info@example.com</a><br />
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
-        </address>  
+          <span class="logo-web">Web</span><span class="logo-footer-studio">Studio</span>
+        </a>
+        <address class="address-footer flex">
+          <p class="address-kiev">г. Киев, пр-т Леси Украинки, 26</p>
+          <a href="mailto:info@example.com" class="footer-contact link">info@example.com</a>
+          <a href="tel:+380991111111" class="footer-contact link">+38 099 111 11 11</a>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
